[package]
name = "box-arc-rc-mutex-semaphore"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.47.1", features = ["sync","rt","time","rt-multi-thread","macros"] }


[[example]]
name = "box_simple_eg"
path = "src/examples/box_simple_eg.rs"


[[example]]
name = "rc_simple_eg"
path = "src/examples/rc_simple_eg.rs"


[[example]]
name = "arc_simple_eg"
path = "src/examples/arc_simple_eg.rs"


[[example]]
name = "mutex_simple_eg"
path = "src/examples/mutex_simple_eg.rs"


[[example]]
name = "semaphore_simple_eg"
path =  "src/examples/semaphore_simple_eg.rs"